# tracer-bio-observability-agent

./: ARCHITECTURE.md  README.md  agent.py  config.toml  pyproject.toml  setup.py
parquet_files/: executions.parquet  metrics.parquet  processed_executions.parquet  processed_metrics.parquet
query_validation_scripts/: README.md  execution_analysis.py  sql_to_parquet.py  top_n_libraries.py
signal_collection/: lifecycle.bt  metrics_collection.sh  monitor_lifecyle_events.sh
simulate_pipelines/: README.md  bioinformatics_pipeline.sh  pipeline_1.sh  pipeline_2.sh  run_pipelines.sh
tracer_bio_agent/: config.py  crud.py  database.py  models.py
tracer_bio_agent/services/: base_services.py  ebpf_execve_service.py  execution_processing_service.py  metrics_processing_service.py  metrics_service.py  ps_util_metrics_service.py
